--- a/app/css/_global.css
+++ b/app/css/_global.css
@@ -6,7 +6,7 @@ body{
     background-color: rgb(255, 255, 255);
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
-    font-weight: 600px;
+    font-weight: 600;
     font-size: 18px;
     color: white;
     font-style: normal;
@@ -25,7 +25,6 @@ body{
 }
 
 .container{
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 15px;
+  margin: 0;
+  padding: 0;
 }
