--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,7 +4,7 @@
 /*----------------------------------------*/
 .header {
   z-index: 100;
-  position: relative;
+  position: absolute;
   padding-top: 55px;
   // .header__inner
   &__square
