--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -319,9 +319,26 @@
     &__card-list{
       display: flex;
       flex-direction: row;
+      gap: 20px;
       overflow-x: auto;
-      ::-webkit-scrollbar {
-        width: 1px;
+      width: 100%;
+      z-index: 11;
+
+      &::-webkit-scrollbar {
+        margin-top: 30px;
+        height: 5px;
+        margin-right: 150px;
+      }
+      &::-webkit-scrollbar-thumb {
+        width: 5px;
+        border-radius: 10px;
+        background-color: #D82329;
+      }
+      &::-webkit-scrollbar-track {
+        width: 5px;
+        -webkit-box-shadow: inset 0 0 6px rgba(white,0.9);
+        border-radius: 10px;
+        background-color: #D9D9D9;
       }
     }
     &__card {
@@ -334,10 +351,25 @@
       font-size: 16px;
       line-height: 30px;
       color: #1D1717;
-
+      width: 250px;
+      min-width: 250px;
       img {
-
+        object-fit: cover;
       }
+      p {
+        margin-top: 30px;
+        color: black;
+      }
+    }
+    &__card-helper{
+      position: relative;
+    }
+    &__card-opacity{
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, white);
+      z-index: -1;
     }
   }
   &__img{
