--- a/app/css/reset.css
+++ b/app/css/reset.css
@@ -1,8 +1,11 @@
+
 html{
     box-sizing: border-box;
   }
+
   a {
-    text-decoration: none !important;
+    color: rgb(255, 255, 255);
+    text-decoration: none
   }
   *,
   *::after,
