--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,8 +5,10 @@
 
 /*----------------------------------------*/
 .header {
-  z-index: 100;
-  position: absolute;
+  margin-bottom: 65px;
+
+  z-index: 10;
+  margin-bottom: -157px;
   padding-top: 55px;
   // .header__inner
   &__square
@@ -230,6 +232,4 @@
   }
 }
 
-.page-padding {
-  padding: 55px 150px 0 150px;
-}
+
