--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -260,7 +260,8 @@
     
     position: relative;
     z-index: 100;
-    margin-bottom: 100px;
+ 
+    margin-top: 235px;
     // .aplication__title
 
     &__title {
@@ -386,13 +387,11 @@
     background-image: url("../img/content1/1.png");
     position: unset;
     width: 100%;
-    height: 990px;
     display: flex;
     object-fit: cover;
     flex-direction: column;
     justify-content: end;
-    top: 0;
-    left: 0;
+
   }
 }
 
@@ -476,8 +475,6 @@
     margin: 0 auto;
    }
 }
-
-
 
 .main-help{
    &__container2{
