--- a/app/scss/_var.scss
+++ b/app/scss/_var.scss
@@ -1,2 +1,9 @@
 $red_button: #D82329;
 $text: #1D1717;
+
+@mixin transition{
+  transition: all 0.3s;
+}
+@mixin transform{
+  transform: scale(1.05);
+}
