--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -1,6 +1,5 @@
+@import "var";
 .main {
-
-
   &-experience {
     position: relative;
     background-color: #3B4956;
@@ -18,12 +17,17 @@
     }
     &__inner {
       display: flex;
+      align-items: center;
     }
 
     // .experience__left
 
     &__left {
       margin-right: 95px;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      gap: 30px;
     }
 
     // .experience__title
@@ -32,7 +36,6 @@
       font-weight: 700;
       font-size: 100px;
       line-height: 65px;
-      margin-bottom: 31px;
       display: flex;
     }
 
@@ -42,7 +45,6 @@
       font-weight: 400;
       font-size: 18px;
       line-height: 30px;
-      margin-bottom: 58px;
     }
 
     // .experience__right
@@ -61,7 +63,6 @@
       margin-bottom: 125px;
     }
     display: flex;
-    // .about__doc
 
     &__doc {
       margin-right: 87px;
@@ -132,7 +133,11 @@
     // .help__img
 
     &__img {
-
+      cursor: pointer;
+      @include transition();
+      &:hover{
+        @include transform();
+      }
     }
   }
   &-spare {
@@ -260,7 +265,7 @@
     
     position: relative;
     z-index: 100;
-    margin-bottom: 100px;
+    margin-bottom: 125px;
     // .aplication__title
 
     &__title {
@@ -284,6 +289,8 @@
     // .aplication__button
 
     &__button {
+      @include transition();
+      cursor: pointer;
       width: 371px;
       font-weight: 500;
       font-size: 20px;
@@ -291,31 +298,15 @@
       padding: 27px 97px 27px 97px ;
       background-color: #D82329;
       border-radius: 5px;
+
+      &:hover {
+        background-color: #b10b00;
+      }
     }
   }
   &-category {
     padding-left: 150px;
     width: 100%;
-    h3 {
-      font-family: 'Montserrat', sans-serif;
-      font-style: normal;
-      font-weight: 600;
-      font-size: 38px;
-      text-align: center;
-
-      color: #1D1717;
-    }
-    a {
-      border-radius: 5px;
-      padding: 26px 32px;
-      font-family: 'Montserrat', sans-serif;
-      font-style: normal;
-      font-weight: 600;
-      font-size: 18px;
-      line-height: 30px;
-      border: 2px #C21C22 solid;
-      color: #C21C22;
-    }
 
     &__top{
       display: flex;
@@ -323,6 +314,33 @@
       align-items: center;
       justify-content: space-between;
       padding: 72px 150px 30px 0;
+
+      h3 {
+        font-family: 'Montserrat', sans-serif;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 38px;
+        text-align: center;
+
+        color: #1D1717;
+      }
+      a {
+        border-radius: 5px;
+        padding: 26px 32px;
+        font-family: 'Montserrat', sans-serif;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 30px;
+        border: 2px #C21C22 solid;
+        color: #C21C22;
+        cursor: pointer;
+        @include transition();
+        &:hover{
+          color: #A00A00;
+          background-color: #FFFFEF;
+        }
+      }
     }
 
     &__card-list{
@@ -332,9 +350,9 @@
       overflow-x: auto;
       width: 100%;
       z-index: 11;
+      padding-bottom: 40px;
 
       &::-webkit-scrollbar {
-        margin-top: 30px;
         height: 5px;
         margin-right: 150px;
       }
@@ -362,6 +380,16 @@
       color: #1D1717;
       width: 250px;
       min-width: 250px;
+      z-index: 10;
+      cursor: pointer;
+      @include transition();
+      &:hover:first-child{
+        margin-left: 10px;
+        @include transform();
+      }
+      &:hover{
+        @include transform();
+      }
       img {
         object-fit: cover;
       }
@@ -384,11 +412,13 @@
   &__img{
     margin-bottom: 106px;
     background-image: url("../img/content1/1.png");
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-color: rgba(black, 0.87);
     position: unset;
     width: 100%;
-    height: 990px;
+    height: 1152px;
     display: flex;
-    object-fit: cover;
     flex-direction: column;
     justify-content: end;
     top: 0;
@@ -402,7 +432,7 @@
 .card-list {
   margin-bottom: 109px;
   display: flex;
-  // .card-list__item
+  justify-content: space-between;
 
   &__item {
     padding-left: 38px;
@@ -412,7 +442,8 @@
   background-color: #99191E;
 }
 .item {
-  margin-right: 20px;
+  @include transition();
+  cursor: pointer;
   background-color: #C21C22;;
   width: 376px;
   
