--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @import "var";
 @import "index";
-
+@import "product-information";
+@import "product-catalog";
 
 /*----------------------------------------*/
 .header {
@@ -229,7 +230,6 @@
       height: 42px;
       margin-right: 19px;
     }
-
     display: flex;
     align-items: center;
     font-weight: 400;
@@ -277,6 +277,8 @@
 }
 
 /*----------------------------------------*/
+
+
 
 @media (max-width: 900px) {
 
