--- a/app/scss/product-catalog.scss
+++ b/app/scss/product-catalog.scss
@@ -1,5 +1,14 @@
 
+
+
+
 .product-catalog {
+    &__page {
+        color: black;
+        font-size: 38px;
+        line-height: 65px;
+    }
+    
     &__top{
         display: flex;
         justify-content: space-between;
@@ -7,45 +16,69 @@
     }
     // .product-catalog__page
 
-    &__page {
-        color: black;
-        font-size: 38px;
+
+    &__go-back{
+        font-size: 18px;
         line-height: 65px;
     }
+    &__card-list-catalog {
+        margin-bottom: 35px;
+        display: flex
+    }
     &__go-back{
-
+        display: flex;
+        align-items: center;
     }
-    &__card-list {
+    &__arrow{
+        margin-right: 30px;
     }
     }
 
-.product-catalog {
 
-		// .product-catalog__card-list
-
-		
-}
 .card {
 
+        margin-right: 35px;
+        max-width: 270px;
+        padding: 31px 35px 38px;
 		// .card__img
 
 		&__img {
+            margin-bottom: 36px;
 		}
 
 		// .card__title
 
 		&__title {
+            margin-bottom: 9px;
+            font-size: 20px;
+            line-height: 24px;
 		}
 
 		// .card__text
 
 		&__text {
-            color: aqua;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 24px;
+            margin-bottom: 20px;
 		}
 
 		// .card__link
 
 		&__link {
+            text-decoration-line:underline;
+            text-decoration-color: red;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 20px;
+            a{
+                color: #D82329;
+            }
 		}
+}
+
+.card-list-catalog{
+    display: flex;
+    margin-bottom: 35px;
 }
 
