--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -61,6 +61,10 @@
       line-height: 30px;
       max-width: 675px;
 
+      font-family: 'Montserrat', sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 18px;
     }
   }
 
@@ -105,6 +109,10 @@
       max-width: 624px;
       height: 300px;
       line-height: 30px;
+      font-family: 'Montserrat', sans-serif;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 18px;
       color: #1D1717;
     }
   }
@@ -136,6 +144,8 @@
       font-weight: 400;
       font-size: 16px;
       line-height: 30px;
+      font-family: 'Montserrat', sans-serif;
+      font-style: normal;
     }
 
     // .help__img
@@ -154,8 +164,10 @@
     &__container_max {
       display: flex;
       max-width: 1200px;
+      width: 100%;
       margin: 0 auto;
       padding: 0;
+      position: relative;
     }
 
     margin-bottom: 88px;
@@ -168,14 +180,24 @@
 
     &__img {
       margin-right: 154px;
-      margin-bottom: 114px;
       height: 374px;
+      z-index: 10;
+      &_back {
+        position: absolute;
+        top: 45px;
+        left: 0;
+        margin-left: -200px;
+        height: 283px;
+        opacity: 0.5;
+      }
     }
 
     // .spare__info
 
     &__info {
       max-width: 500px;
+      display: flex;
+      flex-direction: column;
     }
 
     // .spare__title
@@ -199,6 +221,7 @@
 
     &__button {
       @include transition();
+      width: 100%;
       background-color: red;
       padding: 28px 22px 28px 22px;
       border-radius: 5px;
@@ -221,7 +244,9 @@
 
     // .about-big__info
 
+    //padding-left: ;
 
+    margin-bottom: 110px;
     &__info {
       display: flex;
     }
@@ -238,12 +263,15 @@
     // .about-big__list
 
     &__list {
+      font-size: 0!important;
     }
 
     // .about-big__img
 
     &__img {
-
+      img {
+        height: 100%;
+      }
     }
   }
 
@@ -328,6 +356,10 @@
   &-category {
     padding-left: 150px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
     &__top {
       display: flex;
@@ -335,6 +367,8 @@
       align-items: center;
       justify-content: space-between;
       padding: 72px 150px 30px 0;
+      max-width: 1350px;
+      width: 100%;
 
       h3 {
         font-family: 'Montserrat', sans-serif;
@@ -431,6 +465,7 @@
 
     &__card-helper {
       position: relative;
+      max-width: 1350px;
     }
 
     &__card-opacity {
